@@ -244,6 +244,7 @@ GAIA (Group for Artificial Intelligence Applications) for contributions includin
 and redoing the ilutConvertToHBitmap code.  Their changes are at 
 http://gaia.fdi.ucm.es/grupo/projects/javy/devzone.html#DevILNotes.
 
+Jesse Maurais for support of X11 component
 
 
 Translations:
